src/styles.css
.carousel {
  overflow: hidden;
  width: 100%;
}

.carousel * {
  box-sizing: border-box;
}

.carousel-inner {
  transform-style: preserve-3d;
  overflow: hidden;
}

.carousel-item {
  position: absolute;
  opacity: 0;
  top: 0;

  z-index: -1;
  transform: translateX(0);
}

.carousel-item--active {
  opacity: 1;
  position: relative;
  z-index: 1;
}

